project almost done

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <div class="intro_sec">
       <div class="container">
         <div class="row intro_body">
-          <div class="col-4">
+          <div class="col-sm-4 col-xs-12">
             <div class="profile_img">
               <img src="images/silas.jpg" alt="silas image">
             </div>
           </div>
-          <div class="col-8">
+          <div class="col-sm-8 col-xs-12">
            <div class="row intro__2">
-             <div class="col name_sec">
+             <div class="col col-xs-12 name_sec">
                 <h3 class="name">
                   Billy Pearson
                 </h3>
@@ -33,7 +33,7 @@
                   Front-end developer
                 </p>
              </div>
-             <div class="col contact">
+             <div class="col col-xs-12 contact">
               <p class="mail_contact"><i class="fas fa-envelope"></i> silasabiodun25@gmail.com</p>
               <p class="p_contact"><i class="fas fa-phone-alt"></i> (+603) 546 624 342</p>
              </div>
@@ -47,9 +47,225 @@
            </div>
           </div>
         </div>
-
       </div>
     </div>
+
+    <section class="main_content">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-xs-12 col-sm-12">
+              <section class="skill-set">
+                <p>FRONT END</p>
+                <div class="skill-bar">
+
+                  <div class="prog_sect row">
+                    <div class="col-3">React </div>
+                    <div class="progress col-9">
+                      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 20%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+
+                  <div class="prog_sect row">
+                    <div class="col-3">Javascript </div>
+                    <div class="progress col-9">
+                      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+
+                  <div class="prog_sect row">
+                    <div class="col-3">CSS </div>
+                    <div class="progress col-9">
+                      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+
+                  <div class="prog_sect row">
+                    <div class="col-3">Vue </div>
+                    <div class="progress col-9">
+                      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+
+                  <div class="prog_sect row">
+                    <div class="col-3">Redux </div>
+                    <div class="progress col-9">
+                      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+
+                  <div class="prog_sect row">
+                    <div class="col-3">jquery </div>
+                    <div class="progress col-9">
+                      <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </div>
+              </section>
+
+
+              <section class="hobbies">
+                <h3>Hobbies</h3>
+                <div class="hob-1">
+                  <img src="images/gaming.jpg" alt="games">
+                  <p class="h_head">Gaming</p>
+                  <p class="h_body">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                </div>
+
+                <div class="hob-1">
+                  <img src="images/cooking.jpg" alt="cooling">
+                  <p class="h_head">Cooking</p>
+                  <p class="h_body">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                </div>
+
+                <div class="hob-1">
+                  <img src="images/basketball.jpg" alt="games">
+                  <p class="h_head">Basketball</p>
+                  <p class="h_body">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                </div>
+
+              </section>
+          </div>
+
+
+          <div class="col-md-6 col-xs-12 col-sm-12">
+            <section class="blog">
+              <p class="title_b">
+                Blog
+              </p>
+              <div class="row">
+                <div class="col-5">
+                  <h3>How to organize your CSS</h3>
+                </div>
+                <div class="col-7 b_img">
+                  <img src="images/laptop.jpg" alt="laptop+image">
+                </div>
+              </div>
+
+              <div class="b_text">
+                <p>In this article I tell the story about Proin eu justo sit amet lacus bibendum tincidunt. Vivamus non volutpat nisl, a luctus mi. <br><br> 
+
+                  Donec aliquam est dui, vel vestibulum diam sollicitudin id. Quisque feugiat malesuada molestie.</p>
+              </div>
+
+              <a href="#">dev.to</a>
+            </section>
+
+
+            <section class="experience">
+              <h3>Experiences</h3>
+              <div class="exp_sec row">
+                <div class="col 4">
+                  <img src="images/google.png" alt="google">
+                </div>
+                <div class="col-8">
+                  <small class="exp_y">Feb 2017 - Current</small>
+                  <p class="exp_t">Front-end developer</p>
+                  <p class="exp-desc">Donec aliquam est dui, vel vestibulum diam sollicitudin id. Quisque feugiat malesuada molestie.</p>
+                </div>
+              </div>
+
+              <div class="exp_sec row">
+                <div class="col 4">
+                  <img src="images/Tesla_logo.png" alt="google">
+                </div>
+                <div class="col-8">
+                  <small class="exp_y">Feb 2017 - Current</small>
+                  <p class="exp_t">Front-end developer</p>
+                  <p class="exp-desc">Donec aliquam est dui, vel vestibulum diam sollicitudin id. Quisque feugiat malesuada molestie.</p>
+                </div>
+              </div>
+
+            </section>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <section class="projects">
+      <div class="container">
+        <div class="projects_top row">
+          <div class="col-12">
+            <h3 class="p_txt">Projects (3)</h3>
+            <button class="btn btn-outline-dark">React</button>
+            <button class="btn btn-outline-dark">Vue</button>
+            <button class="btn btn-outline-dark">Responsive</button>
+          </div>
+        </div>
+
+        <div class="projects_sample row">
+          <div class="col-sm-6 col-md-6 col-xs-12 col-lg-4">
+            <div class="samp_grid">
+              <div class="s_img">
+                <img src="images/Screenshot 2021-05-01 at 12.03.00.png" alt="Eddie">
+              </div>
+              <small class="stack">#HTML #TailwindCss #responsive</small>
+              <p class="s_ht">Eddie LP</p>
+              <p class="s_bt">
+                In this project, I work with HTML and CSS to create a responsive page. This page is similiar with a page. The design is from devchallenge.io
+              </p>
+              <div class="button">
+                  <button class="btn btn-primary">Demo</button>
+                  <button class="btn btn-outline-dark">Code</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-md-6 col-xs-12 col-lg-4">
+            <div class="samp_grid">
+              <div class="s_img">
+                <img src="images/jayo.png" alt="Jayo">
+              </div>
+              <small class="stack">#HTML #CSS #responsive</small>
+              <p class="s_ht">Jayo</p>
+              <p class="s_bt">
+                In this project, I work with HTML and CSS to create a responsive page. This page is similiar with a page. The design is from devchallenge.io
+              </p>
+              <div class="button">
+                  <button class="btn btn-primary">Demo</button>
+                  <button class="btn btn-outline-dark">Code</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-md-6 col-xs-12 mt col-lg-4">
+            <div class="samp_grid">
+              <div class="s_img">
+                <img src="images/insure.png" alt="insure">
+              </div>
+              <small class="stack">#HTML #CSS #responsive</small>
+              <p class="s_ht">insure</p>
+              <p class="s_bt">
+                In this project, I work with HTML and CSS to create a responsive page. This page is similiar with a page. The design is from devchallenge.io
+              </p>
+              <div class="button">
+                  <button class="btn btn-primary">Demo</button>
+                  <button class="btn btn-outline-dark">Code</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="m_btn">
+          <button class="btn btn-outline-dark"> < </button>
+          <button class="btn btn-outline-dark">1</button>
+          <button class="btn btn-outline-dark">2</button>
+          <button class="btn btn-outline-dark">3</button>
+          <button class="btn btn-outline-dark">...</button>
+          <button class="btn btn-outline-dark">10</button>
+          <button class="btn btn-outline-dark"> > </button>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <section class="footer container">
+        <div class="cc">
+          created by Nerdyxils - devChallenges.io
+        </div>
+      </section>
+    </footer>
+    
 
 
 
