--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
                 Blog
               </p>
               <div class="row">
-                <div class="col-5">
+                <div class="col-sm-5 col-xs-12">
                   <h3>How to organize your CSS</h3>
                 </div>
-                <div class="col-7 b_img">
+                <div class="col-sm-7 col-xs-12 b_img">
                   <img src="images/laptop.jpg" alt="laptop+image">
                 </div>
               </div>
