--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </div>
           <div class="col-sm-8 col-xs-12">
            <div class="row intro__2">
-             <div class="col-md-6 col-sm-12 col-xs-12 name_sec">
+             <div class="col-lg-6 col-sm-12 col-xs-12 name_sec">
                 <h3 class="name">
                   Billy Pearson
                 </h3>
@@ -33,7 +33,7 @@
                   Front-end developer
                 </p>
              </div>
-             <div class="col-md-6 col-sm-12 col-xs-12 contact">
+             <div class="col-lg-6 col-sm-12 col-xs-12 contact">
               <p class="mail_contact"><i class="fas fa-envelope"></i> silasabiodun25@gmail.com</p>
               <p class="p_contact"><i class="fas fa-phone-alt"></i> (+603) 546 624 342</p>
              </div>
